Changes tabs-item to have margin on the right so that it's left-aligned correctly.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -822,7 +822,7 @@
 
 .tabs-item {
     float: left;
-    margin: 0 0 0 3px;
+    margin: 0 3px 0 0;
     padding: 0;
     position: relative;
 
